--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
     <div id="content">
         <h3>Secret Image</h3>
-        <img src="https://yourwebsite.com/secret.jpg" alt="Hidden Image"> <!-- Replace with your image URL -->
+        <img src="https://github.com/Myo-Tun-Aye/qr-protected-page/blob/main/web.png"> <!-- Replace with your image URL -->
     </div>
 
 </body>
